--- a/Bootcamp_Week_0.ipynb
+++ b/Bootcamp_Week_0.ipynb
@@ -6,7 +6,7 @@
       "name": "Bootcamp Week 0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOn/smADcmSeNXOsLDQrn/s",
+      "authorship_tag": "ABX9TyNtPv/z1QKTOXlNp+ZgO2ad",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1846,12 +1846,427 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**NumPy**"
+      ],
+      "metadata": {
+        "id": "e-0aCwObG9A7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Numpy is a library of numericals or numbers\n",
+        "# Just like libraries in colleges and schools \n",
+        "# uses for refernce and also for get back and develop\n",
+        "# import numpy as np\n",
+        "# taking library and np is nick name jus like for humans"
+      ],
+      "metadata": {
+        "id": "pyOp0ldwgP7r"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Array in NumPy\n",
+        "**"
+      ],
+      "metadata": {
+        "id": "4ahVk8gcPt8X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# array is data structure \n",
+        "# data structure is a sequence or order for arranging the data\n",
+        "# ndarray is n-dimensional array eg:1d,2d,3d....nd\n",
+        "# vectors and matrices may had 1 or more dimesions"
+      ],
+      "metadata": {
+        "id": "0gIyj95SPCS9"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Create NumPy Array from Python List\n",
+        "**"
+      ],
+      "metadata": {
+        "id": "8m3SnjIgRfq8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan_marks=[40,55,68,75,99,100]\n",
+        "# list of marks \n",
+        "import numpy as np\n",
+        "# lib import as nick name\n",
+        "np.marks=np.array(bhuvan_marks)\n",
+        "# nickname.any name=lib.data type(my list)\n",
+        "np.marks"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yoi4qVaYREwq",
+        "outputId": "b97675e3-c74b-4be5-cb75-e7e60fa21a82"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 40,  55,  68,  75,  99, 100])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Compare Python List and NumPy Array\n",
+        "**"
+      ],
+      "metadata": {
+        "id": "r8b5O0I_UpLT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# python list may contain any data typr but numpy contain same data type\n",
+        "# python takes more time and memory but numpy takes less time,steps and memory"
+      ],
+      "metadata": {
+        "id": "eaGky-FJR1Cc"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Numpy array type**"
+      ],
+      "metadata": {
+        "id": "YT5S3qT2Xn4n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "# take from lib as nick name\n",
+        "bhuvan=np.array([[1,2,3],[5,6,7],[8,99,45],[74,555,698]])\n",
+        "# nested list is a list having sublists\n",
+        "# the family is nested list having your family,relatives family and their relative family \n",
+        "bhuvan\n",
+        "# print(bhuvan) is same as bhuvan in new line"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ETM3mGLRXmn3",
+        "outputId": "dc690519-3337-48ce-a4fa-ad62fb8529c6"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  1,   2,   3],\n",
+              "       [  5,   6,   7],\n",
+              "       [  8,  99,  45],\n",
+              "       [ 74, 555, 698]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan.size\n",
+        "# size of bhuvan contrains 12 elements"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fhowmpu4YXB7",
+        "outputId": "9a7c1ea0-2d19-4d52-ddfc-77d1386f7855"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan.dtype\n",
+        "# integer type and 64 bit computer and 32 bit depends on your computer\n",
+        "# 64 bit had more memory allocation than 32bit but if it works fine!"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0feaoKAiZGaE",
+        "outputId": "98501ce0-a634-4f5c-d480-757203bc3fed"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan.shape\n",
+        "# shape is 4by3, 4(horizontal) rows and 3(vertical) columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mzOVLATEZKrs",
+        "outputId": "c5e74738-d7d5-4503-e118-46408f47e8db"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan.ndim\n",
+        "# dimensions is 2d like length*breadth"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xy9leAbpZL33",
+        "outputId": "b354ccc0-3b9a-4ac7-eb3b-6b6f53600c78"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(bhuvan)\n",
+        "# type gives the what model it is."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RZr9mPSdZOmx",
+        "outputId": "1cea5c04-0cf8-45fc-d418-9d643eed7d32"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**arange**"
+      ],
+      "metadata": {
+        "id": "CKkoin2YiIi-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan=np.arange(10)\n",
+        "# collection of  continous integrs upto the entered value\n",
+        "bhuvan"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ifH-jAP_ZQ5z",
+        "outputId": "5578d7ce-0293-4e7f-f06c-d64509ede5c8"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan=np.zeros(10)\n",
+        "# creates 1dim zeros incl 10 digits\n",
+        "bhuvan"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ZwupT2fhVcE",
+        "outputId": "02ea58b0-58d2-48d2-8d1c-4d73019e901a"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan=np.ones(3)\n",
+        "# array of 3 digits 1dim jus like zeros\n",
+        "bhuvan"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3d-S0kdbi3Sb",
+        "outputId": "46ae356f-ba16-43b6-f3ef-4e4fe3ebbef9"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 1., 1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bhuvan=np.linspace(3,15,8)\n",
+        "# start=3,stop=15, num=upto 8 digits incl\n",
+        "# with out num it will gives 50 samples\n",
+        "bhuvan"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lHNnVW42jWcd",
+        "outputId": "9078ebcf-1f1e-40d8-9a0b-c980cf3be2a2"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 3.        ,  4.71428571,  6.42857143,  8.14285714,  9.85714286,\n",
+              "       11.57142857, 13.28571429, 15.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "pyOp0ldwgP7r"
+        "id": "7ZcMhjplj33d"
       },
       "execution_count": null,
       "outputs": []
