--- a/Bootcamp_Week_0.ipynb
+++ b/Bootcamp_Week_0.ipynb
@@ -6,7 +6,7 @@
       "name": "Bootcamp Week 0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNtPv/z1QKTOXlNp+ZgO2ad",
+      "authorship_tag": "ABX9TyNBN5mysT5Qog9sd6kycQd5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2259,6 +2259,15 @@
           "execution_count": 46
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Basic Methods, Reshaping and Slicing**"
+      ],
+      "metadata": {
+        "id": "e4Dhx9i9wgS4"
+      }
     },
     {
       "cell_type": "code",
