--- a/Bootcamp_Week_0.ipynb
+++ b/Bootcamp_Week_0.ipynb
@@ -6,7 +6,7 @@
       "name": "Bootcamp Week 0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNBN5mysT5Qog9sd6kycQd5",
+      "authorship_tag": "ABX9TyMixzIpJAzcLA/xVKk4dd/i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1866,7 +1866,7 @@
       "metadata": {
         "id": "pyOp0ldwgP7r"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1890,7 +1890,7 @@
       "metadata": {
         "id": "0gIyj95SPCS9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1921,7 +1921,7 @@
         "id": "yoi4qVaYREwq",
         "outputId": "b97675e3-c74b-4be5-cb75-e7e60fa21a82"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1954,7 +1954,7 @@
       "metadata": {
         "id": "eaGky-FJR1Cc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1984,7 +1984,7 @@
         "id": "ETM3mGLRXmn3",
         "outputId": "dc690519-3337-48ce-a4fa-ad62fb8529c6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2014,7 +2014,7 @@
         "id": "fhowmpu4YXB7",
         "outputId": "9a7c1ea0-2d19-4d52-ddfc-77d1386f7855"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2042,7 +2042,7 @@
         "id": "0feaoKAiZGaE",
         "outputId": "98501ce0-a634-4f5c-d480-757203bc3fed"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2069,7 +2069,7 @@
         "id": "mzOVLATEZKrs",
         "outputId": "c5e74738-d7d5-4503-e118-46408f47e8db"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2096,7 +2096,7 @@
         "id": "xy9leAbpZL33",
         "outputId": "b354ccc0-3b9a-4ac7-eb3b-6b6f53600c78"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2123,7 +2123,7 @@
         "id": "RZr9mPSdZOmx",
         "outputId": "1cea5c04-0cf8-45fc-d418-9d643eed7d32"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2160,7 +2160,7 @@
         "id": "ifH-jAP_ZQ5z",
         "outputId": "5578d7ce-0293-4e7f-f06c-d64509ede5c8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2188,7 +2188,7 @@
         "id": "6ZwupT2fhVcE",
         "outputId": "02ea58b0-58d2-48d2-8d1c-4d73019e901a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2216,7 +2216,7 @@
         "id": "3d-S0kdbi3Sb",
         "outputId": "46ae356f-ba16-43b6-f3ef-4e4fe3ebbef9"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2245,7 +2245,7 @@
         "id": "lHNnVW42jWcd",
         "outputId": "9078ebcf-1f1e-40d8-9a0b-c980cf3be2a2"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2272,10 +2272,332 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "# imprt lib \n",
+        "bhuvan=np.array([2,3,89,6,7,9])\n",
+        "# append adds the number/item at last\n",
+        "np.append(bhuvan,36)"
+      ],
+      "metadata": {
+        "id": "7ZcMhjplj33d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ecd0b627-28b7-4c71-afcc-f4605b0f7fc3"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2,  3, 89,  6,  7,  9, 36])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sort will arrange in ascending order\n",
+        "np.sort(bhuvan)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "66ebc8RxxDPh",
+        "outputId": "e052ecca-5471-4af2-8334-182414c7b465"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2,  3,  6,  7,  9, 89])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lekkala=np.arange(12)\n",
+        "# arange will sort numbers upto the entered value\n",
+        "lekkala"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rtlZziUwBLoa",
+        "outputId": "5f8f65f4-b2fc-4c95-fb57-e528b56d646c"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# arranging can be done for 12 in 3*4,4*3,6*2\n",
+        "np.reshape(lekkala,(6,2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S9USqy2qCJPh",
+        "outputId": "4e0ef474-e7b3-41c0-853d-1a8696aa9404"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2],\n",
+              "       [ 3,  4,  5],\n",
+              "       [ 6,  7,  8],\n",
+              "       [ 9, 10, 11]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.reshape(lekkala,(4,3))\n",
+        "# different types "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ARJH9Q3FCeuF",
+        "outputId": "9d57c17e-4e7d-47dc-9855-92e5d8642558"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2],\n",
+              "       [ 3,  4,  5],\n",
+              "       [ 6,  7,  8],\n",
+              "       [ 9, 10, 11]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy.core.fromnumeric import ndim\n",
+        "b=np.array([12,45,98,8,19])\n",
+        "# positive indexing is done from o,1,2,..etc\n",
+        "# here 0 is 12, 1 is 45,2 is 98 \n",
+        "b[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yDoF3D_QCrEi",
+        "outputId": "46b2aff4-9ded-42c3-97ac-76cd8fc6dd28"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "98"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.ndim(2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FasjUxv7Ftlh",
+        "outputId": "64ffd7da-3e58-4a8b-a84b-0362f180dc99"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# postive indexing in 2d array left to right\n",
+        "b=np.array([[12,45,98],\n",
+        "            [7,8,19]])\n",
+        "# here it is 2d matrix type, 12 is (0,0) 45 is (0,1) indexing\n",
+        "b[1,2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NQKknEMWG8xy",
+        "outputId": "c6752ef0-2087-4ddc-f811-6e864af3db1d"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# same for the negative indexing\n",
+        "b=np.array([[1,2,5],\n",
+        "            [8,7,4]])\n",
+        "# starts from (-1,-1) is the last number same goes in right to left direction\n",
+        "b[-1,-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q1sSievGQH7r",
+        "outputId": "c53fef8b-6323-40ae-d833-637461036424"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=np.array([[1,2,3]\n",
+        "         ,[4,5,6]\n",
+        "         ,[7,8,9]\n",
+        "         ,[10,11,12]])\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hPF43VtYTFMq",
+        "outputId": "79561d55-736e-4c1c-d198-802c3b357477"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3],\n",
+              "       [ 4,  5,  6],\n",
+              "       [ 7,  8,  9],\n",
+              "       [10, 11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b[0:2:2]\n",
+        "# start with 0 incl 1st number and end upto last not incl last\n",
+        "# step 2 is upto [4,5,6] so its not including "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8fdvzzdFVZ5Z",
+        "outputId": "3c2c66b6-2463-4496-903e-4b5cb2eee763"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "7ZcMhjplj33d"
+        "id": "CPWM8dT5Wh7L"
       },
       "execution_count": null,
       "outputs": []
