--- a/Bootcamp_Week_0.ipynb
+++ b/Bootcamp_Week_0.ipynb
@@ -6,7 +6,7 @@
       "name": "Bootcamp Week 0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMixzIpJAzcLA/xVKk4dd/i",
+      "authorship_tag": "ABX9TyPiVq/ZS/Yz8F2HUrxd6hXY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,25 +30,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lFU7yz9cohqP",
-        "outputId": "702fe552-450f-467b-a529-a545dfef78e8"
+        "outputId": "3f8c403c-b0f0-417b-bae3-eaa9fc886d5d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "helo bhuvan\n"
+            "hello bhuvan\n"
           ]
         }
       ],
       "source": [
-        "print(\"helo bhuvan\")"
+        "print(\"hello bhuvan\")"
       ]
     },
     {
