--- a/Bootcamp_Week_0.ipynb
+++ b/Bootcamp_Week_0.ipynb
@@ -6,7 +6,7 @@
       "name": "Bootcamp Week 0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPiVq/ZS/Yz8F2HUrxd6hXY",
+      "authorship_tag": "ABX9TyNJ3IYXGL/hkI361x8WwWq4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2537,6 +2537,7 @@
         "         ,[4,5,6]\n",
         "         ,[7,8,9]\n",
         "         ,[10,11,12]])\n",
+        "# print b array\n",
         "b"
       ],
       "metadata": {
@@ -2592,15 +2593,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "** Congrats completed week 0**"
       ],
       "metadata": {
-        "id": "CPWM8dT5Wh7L"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "hCSmiP27ZCpQ"
+      }
     }
   ]
 }
