--- a/Postgres_SQL.ipynb
+++ b/Postgres_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Postgres SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8qpSuxJzI9wcykqJhnqCz",
+      "authorship_tag": "ABX9TyPkNfQN3zBRYuxDzDimW+fS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "Download and Install SQL(Postgres or orcale or MS)\n",
         "Give a password\n",
         "\n",
-        "Open SQL Shell ( NOT windows )\n",
+        "Open Postgres SQL Shell ( NOT windows )\n",
         "Server [localhost]:\n",
         "Enter\n",
         "Database [postgres]:\n",
@@ -63,7 +63,7 @@
         "\n",
         "\n",
         "create table person (\n",
-        "\tid BIGSERIAL NOT NULL PRIMARY KEY,\n",
+        "\tid BIGSERIAL NOT NULL PRIMARY KEY,(Primary is the main one ) (Bigserial is for sequence)\n",
         "\tfirst_name VARCHAR(50) NOT NULL,\n",
         "\tlast_name VARCHAR(50) NOT NULL,\n",
         "\temail VARCHAR(150),\n",
@@ -73,12 +73,40 @@
         ");\n",
         "postgres=# \\c test (connect with databases or host)\n",
         "\n",
-        " test-#\n",
+        " test-# ( Connect with already saved database)\n",
         "\n",
-        "\n"
+        " test-# \\i(destinataion folder) /Users/Bhuvan/Downloads/person.sql ( connect sql file data saved in pc)\n",
+        "\n",
+        "Press enter\n",
+        "\n",
+        "test=# SELECT * FROM person; (gives all data in table format)\n",
+        "test=# SELECT * FROM person ORDER BY country; ( it specifies by Ascending order)\n",
+        "test=# SELECT * FROM person ORDER BY country DESC; ( it specifies by Descending order)\n",
+        "\n",
+        "test=# SELECT * FROM person ORDER BY email DESC; ( generally shows null data email first)\n",
+        "\n",
+        "test=# SELECT * FROM person ORDER BY id,email; (can sort by both columns)\n",
+        "\n",
+        "Thumb rule (select only 1 column)\n",
+        "\n",
+        "test=# SELECT country FROM person; (shows all country data with duplicates)\n",
+        "test=# SELECT country FROM person ORDER BY country;( sort all data in ascending order with duplicates)\n",
+        "test=# SELECT DISTINCT country FROM person ORDER BY country;( removes duplicates of same country)\n"
       ],
       "metadata": {
         "id": "2vmadpQRVTGt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "test=# SELECT * FROM person WHERE gender = 'Male'; (filter by gender male)\n",
+        "\n",
+        "\n",
+        "test=# SELECT * FROM person WHERE gender = 'Male' AND country = 'Poland'; (filter by both country and gender)"
+      ],
+      "metadata": {
+        "id": "XmwtFL482Urw"
       }
     }
   ]
